- bios/xhdi.c: Correct typo in struct's name. Contributed by David Galvez. (VRI)

2012-04-11
- include/config.h vdi/vdi_text.c: Added CONF_WITH_GDOS to allow disabling
  GDOS support code. (RFB)
- release.mk doc/xhdi.txt: Added documentation about the current XHDI status.
  Contributed by David Galvez. (VRI)
- release.mk: Added missing unix2dos for 192k targets. (VRI)
- desk/deskrez.c desk/desktop.dfn desk/desktop.rsc: Display correct sizes in
  Falcon resolution change dialog for non-VGA monitors. (RFB)

2012-04-12
- bdos/fsdrive.c: Fix possible memory leak in log_media().  (RFB)
- bdos/fsio.c: Code cleanup in xrw(): eliminate two GOTOs & add explanatory
  comments. (RFB)

2012-04-13
- include/config.h: For TARGET_192, disable CONF_WITH_MEGARTC by default. (RFB)

2012-04-14
- doc/bugs.txt: Removed games that now run from list of problems. Contributed
  by Eero Tamminen. (RFB)
- desk/deskfun.c: Issue more informative alert if trying to create a folder
  with a too-long name. (RFB)

2012-04-16
- desk/desktop.rsc: Changed alerts to conform to standard TOS limit of 30
  characters per line. (RFB)
- aes/geminit.c aes/geminit.h aes/gemshlib.c: Code cleanup: eliminated some
  unnecessary globals. (RFB)
- aes/gemshlib.c aes/gemshlib.h: Code cleanup: make sh_apdir[] local, and
  use #define for its length. (RFB)
- aes/geminit.c aes/gemwmlib.c aes/gemwmlib.h: Code cleanup: eliminate
  ad_windspb. (RFB)
- aes/geminit.c aes/gemoblib.c aes/gemoblib.h: Code cleanup: eliminate
  ad_edblk, ad_bi, ad_ib. (RFB)
- aes/geminit.c aes/gemshlib.c: Code cleanup: really make some variables
  local. (RFB)
- aes/gemctrl.c aes/gemgsxif.c aes/geminit.c aes/geminit.h: Code cleanup:
  eliminate ad_mouse. (RFB)
- aes/gemshlib.c desk/deskapp.c desk/deskapp.h desk/deskins.c desk/desksupp.c:
  Removed AF_ISFMEM, since it has no meaning when the AES is ROMmed. (RFB)
- desk/deskins.c desk/desktop.dfn desk/desktop.rsc: Removed 'use full memory'
  objects from 'Configure application' dialog. (RFB)